--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "ednaldo-barros",
+  "homepage": "https://ednaldobarros.github.io/cards-flashes",  
   "private": true,
   "version": "0.0.0",
   "type": "module",
